[package]
name = "jwt-explorer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
base64 = "0.13"
copypasta = "0.7"
crypto-hashes = { version = "0.9", features = ["include_weak"] }
#eframe = "0.14"
hmac = "0.11"
lazy_static = "1.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = { version = "0.10", features = ["test"] }
strum = { version = "0.22", features = ["derive"] }
strum_macros = "0.22"

[dependencies.eframe]
git = "https://github.com/emilk/egui"
rev = "bd06dec"