[package]
name = "jwt-explorer"
version = "0.4.1"
edition = "2021"
description = "Decode, explore, and sign JWTs"
repository = "https://github.com/sciguy16/jwt-explorer"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = ["David Young"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
base64 = "0.13"
chrono = { version = "0.4", features = ["serde"] }
copypasta = "0.8"
csv = "1"
eframe = { version = "0.18", features = ["persistence"] }
hmac = "0.12"
lazy_static = "1.4"
log = "0.4"
openssl = { version = "0.10", features = ["vendored"] }
semver = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
simplelog = { version = "0.12", features = ["test"] }
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["blocking", "rustls-tls", "json"]

[build-dependencies]
chrono = "0.4"

[package.metadata.deb]
depends = "libxcb-shape0, libxcb-xfixes0, libxkbcommon0, libxcb-render0"
extended-description = """\
Decode, explore, and sign JWTs\
"""
section = "web"
priority = "optional"
assets = [
	["target/release/jwt-explorer", "usr/bin/", "755"]
]
